--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <body>
     <header>
       <div class="container">
-        <h2>NETFLIX</h2>
+        <h2 class="logo">NETFLIX</h2>
         <nav>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
+          <a href="">Home</a>
+          <a href="">Series</a>
+          <a href="">Films</a>
+          <a href="">Documentaries</a>
         </nav>
       </div>
     </header>
