created main banner

--- a/index.html
+++ b/index.html
@@ -19,5 +19,17 @@
         </nav>
       </div>
     </header>
+    <main>
+      <div class="main-film">
+        <div class="container">
+          <h3 class="title">KINGDOM</h3>
+          <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</br> Suscipit quia ratione quod nesciunt neque provident.</p>
+        </div>
+        <div class="btns">
+          <button role="button" class="btn">Watch Now</button>
+          <button role="button" class="btn">More Info</button>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
