add container margins

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
       <div class="main-film">
         <div class="container">
           <h3 class="title">KINGDOM</h3>
-          <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</br> Suscipit quia ratione quod nesciunt neque provident.</p>
+          <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Suscipit quia ratione quod nesciunt neque provident. Lorem ipsum dolor sit 
+            amet. Lorem ipsum dolor sit amet.
+          </p>
         </div>
         <div class="btns">
           <button role="button" class="btn">
