add Flickity library  js carousel

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <link rel="stylesheet" href="style.css" />
     <title>NETFLIX CLONE</title>
   </head>
@@ -42,5 +43,41 @@
       </div>
     </main>
 
+    <div class="main-carousel">
+      <div class="box carousel-cell">
+        <img src="https://wallpaperaccess.com/full/6664894.jpg" alt="film-image">
+      </div>
+      <div class="box carousel-cell">
+        <img src="https://wallpaperaccess.com/full/6664894.jpg" alt="film-image">
+      </div>
+      <div class="box carousel-cell">
+        <img src="https://wallpaperaccess.com/full/6664894.jpg" alt="film-image">
+      </div>
+      <div class="box carousel-cell">
+        <img src="https://wallpaperaccess.com/full/6664894.jpg" alt="film-image">
+      </div>
+      <div class="box carousel-cell">
+        <img src="https://wallpaperaccess.com/full/6664894.jpg" alt="film-image">
+      </div>
+      <div class="box carousel-cell">
+        <img src="https://wallpaperaccess.com/full/6664894.jpg" alt="film-image">
+      </div>
+      <div class="box carousel-cell">
+        <img src="https://wallpaperaccess.com/full/6664894.jpg" alt="film-image">
+      </div>
+      <div class="box carousel-cell">
+        <img src="https://wallpaperaccess.com/full/6664894.jpg" alt="film-image">
+      </div>
+      <div class="box carousel-cell">
+        <img src="https://wallpaperaccess.com/full/6664894.jpg" alt="film-image">
+      </div>
+    </div>
+
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+    <script>
+      var flkty = new Flickity( '.main-carousel', {
+      groupCells: true
+      });
+    </script>
   </body>
 </html>
